Add basic save as template action for roots.